# Reatilflow

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  TZ.md  docker-compose.prod.yml  docker-compose.yml  Документ Microsoft Word.docx
backend/: .dockerignore  =2.8.0  Dockerfile  alembic.ini  alembic_timescale.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_role_check.py  0003_catalog_constraints.py  0004_store_pii_and_user_fk.py  0005_user_phone_encrypt.py  0006_stock_finance.py  0007_orders.py  0008_order_templates.py  0009_outbox_seq.py  0010_attendance.py  0011_gps.py  0012_delivery.py  0013_push_log.py  0014_contract.py  0015_ticket.py  0016_promo.py  0017_stats_indexes.py  0018_append_only_triggers.py  0019_outbox_seq_resync.py  0020_multitenancy.py  0021_pos.py  0022_marketplace.py  0023_marketplace_orders.py  0024_marketplace_delivery.py  0025_marketplace_banners_promo_featured.py  0026_superadmin_role_check.py  0027_audit_outbox_enterprise_nullable.py  0028_ledger_approval.py  0029_gps_point_enterprise_id.py  0030_store_inventory_source_delivery.py  0031_branch_table.py  0032_per_tenant_unique_catalog.py  0033_store_decouple.py  0034_contract_supplier.py  0035_mp_order_onetime.py
backend/alembic_timescale/: README  env.py  script.py.mako
backend/alembic_timescale/versions/: ts0001_gps_hypertable.py
backend/app/: main.py
backend/app/core/: config.py  crypto.py  db.py  errors.py  i18n.py  jwt.py  logging_config.py  messages.py  metrics.py  middleware.py  redis.py  security.py  storage.py  telemetry.py  tenant_context.py  uuid7.py
backend/app/models/: __init__.py  ad_banner.py  append_only.py  attendance.py  audit.py  base.py  branch.py  catalog.py  contract.py  delivery.py  enterprise.py  finance.py  gps.py  marketplace.py  order.py  outbox.py  pos.py  promo.py  push.py  stock.py  store.py  store_inventory.py  ticket.py  user.py
backend/app/modules/analytics/: __init__.py  ai_enrich.py  recommendations.py  router.py  schemas.py  service.py
backend/app/modules/assistant/: __init__.py  prompts.py  router.py  schemas.py  service.py
backend/app/modules/attendance/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/branches/: router.py  schemas.py  service.py
backend/app/modules/catalog/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/contracts/: router.py  schemas.py  service.py
backend/app/modules/customers/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/delivery/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/enterprise/: __init__.py  router.py  schemas.py
backend/app/modules/finance/: router.py  schemas.py  service.py
backend/app/modules/gps/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/import_data/: __init__.py  column_mapping.py  excel.py  router.py  schemas.py  service.py  vision.py
backend/app/modules/marketplace/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/orders/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/pos/: __init__.py  expiry.py  expiry_scan.py  router.py  schemas.py  service.py
backend/app/modules/promo/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/push/: __init__.py  messages.py  provider.py  router.py  service.py  worker.py
backend/app/modules/rbac/: __init__.py  dependency.py  enterprise_scope.py  module_gate.py  permissions.py  router.py  scope.py  service.py
backend/app/modules/stats/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/stock/: router.py  schemas.py  service.py
backend/app/modules/superadmin/: dependency.py  router.py  schemas.py  service.py
backend/app/modules/sync/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/tickets/: router.py  schemas.py  service.py
backend/app/modules/users/: router.py  schemas.py  service.py
backend/app/tests/: conftest.py  test_append_only.py  test_db_retry.py  test_health.py  test_security.py  test_security_s2.py  test_t6_fixes.py
backend/app/tests/analytics/: __init__.py  conftest.py  test_analytics.py
backend/app/tests/auth/: __init__.py  (+3 more)
backend/scripts/: create_superadmin.py  purge_deleted_enterprises.py  reset_db.py  seed.py
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
(+452 files in other folders)
